--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro C</title>
-    <script src="estudo.js"></script> </script>
-
+    <script src="estudo.js"></script>
 </head>
 <body>
-    <button onclick="escreva()">Clique aqui</button>
+    Valor: <input id="valor" type="text"><br>
+    juros(Mensais): <input id="juros" type="text"><br>
+    Nr. Meses:<input id="meses" type="text"><br>
+    <button onclick="mat()"> Enviar </button>
 </body>
 </html>
