--- a/index.html
+++ b/index.html
@@ -12,5 +12,21 @@
     juros(Mensais): <input id="juros" type="text"><br>
     Nr. Meses:<input id="meses" type="text"><br>
     <button onclick="mat()"> Enviar </button>
+
+     <br><br><br><br>
+     <span id="resultado"></span>0,00</span>
+     valor 1: <input  id="v1"  type="text"><br>
+     valor 2: <input  id="v2"  type="text"><br>
+     valor 3: <input  id="v3"  type="text"><br>
+
+<button onclick="soma()">Calcular Soma</button>
+
+<span id="resultado"></span>0,00</span>
+valor 1: <input  id="v1"  type="text"><br>
+valor 2: <input  id="v2"  type="text"><br>
+valor 3: <input  id="v3"  type="text"><br>
+
+<button onclick="subitrair()">Calcular subitração</button>
+    
 </body>
 </html>
