--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro C</title>
-    <script src="estudo.js"></script>
+    <title>primeir C</title>
+<script src="estudo.js"></script>
+
 </head>
 <body>
-    Valor: <input id="valor" type="text"><br>
-    juros(Mensais): <input id="juros" type="text"><br>
-    Nr. Meses:<input id="meses" type="text"><br>
-    <button onclick="mat()"> Enviar </button>
+   <div class="calc">
+    <span  id="totalGeral" ></span>Total:0,00</span><br>
+   Capital:<input id="valor"  placeholder="R$" type="text"><br>
+   Juros Mensais: <input id="juros" placeholder="% mês" type="text"><br>
+   N°. de Messes: <input id="messes" placeholder="tempo" type="text"><br>
+   <button onclick="mat()">Enviar</button>
 
-     <br><br><br><br>
-     <span id="resultado"></span>0,00</span>
-     valor 1: <input  id="v1"  type="text"><br>
-     valor 2: <input  id="v2"  type="text"><br>
-     valor 3: <input  id="v3"  type="text"><br>
+   <span id="tempo"> Mês a Mês</span></span>
+</div>
+   valor <input id="valor" type="text"><br>
+   Juros Mensais: <input id="juros"  type="text"><br>
+   N°. de Messes: <input id="messes" type="text"><br>
+<button onclick="mat()">Enviar</button> 
 
-<button onclick="soma()">Calcular Soma</button>
-
-<span id="resultado"></span>0,00</span>
-valor 1: <input  id="v1"  type="text"><br>
-valor 2: <input  id="v2"  type="text"><br>
-valor 3: <input  id="v3"  type="text"><br>
-
-<button onclick="subitrair()">Calcular subitração</button>
-    
+   <br><br><br><br>
+   <span id="resultado">0,00</span><br><br>
+   valor 1: <input id="v1" type="text"><br>
+   valor 2: <input id="v2" type="text"><br>
+   valor 3: <input id="v3" type="text"><br>
+   <button onclick="media()">calcular Média</button>
+   <button onclick="soma()">calcular Soma</button>
+   <button onclick="subtração()">calcular subtração</button>
 </body>
 </html>
