--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>primeir C</title>
 <script src="estudo.js"></script>
+<link rel="stylesheet"  href="geral.css">
 
 </head>
 <body>
-   <div class="calc">
-    <span  id="totalGeral" ></span>Total:0,00</span><br>
+   <div id="caladora">
+      <div id="spTotal">
+     <span id="total"> Total:0,00</span><br>
+   </div>
    Capital:<input id="valor"  placeholder="R$" type="text"><br>
    Juros Mensais: <input id="juros" placeholder="% mês" type="text"><br>
    N°. de Messes: <input id="messes" placeholder="tempo" type="text"><br>
-   <button onclick="mat()">Enviar</button>
+   <button onclick="onclick()">caucula</button>
+
+   <div>
+      
+   </div>
 
    <span id="tempo"> Mês a Mês</span></span>
 </div>
