--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-<html lang="pt br">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeir C</title>
-<script src="estudo.js"></script>
-<link rel="stylesheet"  href="geral.css">
-
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Primeiro D</title>
+   <script src="estudo.js"></script>
+   <link rel="stylesheet" href="geral.css">
 </head>
+
 <body>
-   <div id="caladora">
+
+   <div id="calculadora">
       <div id="spTotal">
-     <span id="total"> Total:0,00</span><br>
+         <span id="total">Total: 0,00</span><br>
+      </div>
+      Capital: <input id="valor" type="text"> <br>
+      Juros Mensais: <input id="juros" type="text"> <br>
+      Nr. de Meses: <input id="meses" type="text"> <br>
+      <button onclick="total()">Calcula</button>
    </div>
-   Capital:<input id="valor"  placeholder="R$" type="text"><br>
-   Juros Mensais: <input id="juros" placeholder="% mês" type="text"><br>
-   N°. de Messes: <input id="messes" placeholder="tempo" type="text"><br>
-   <button onclick="onclick()">caucula</button>
-
-   <div>
-      
+   <div class="spLista">
+      <span id="mes">Meses</span>
    </div>
 
-   <span id="tempo"> Mês a Mês</span></span>
-</div>
-   valor <input id="valor" type="text"><br>
-   Juros Mensais: <input id="juros"  type="text"><br>
-   N°. de Messes: <input id="messes" type="text"><br>
-<button onclick="mat()">Enviar</button> 
 
-   <br><br><br><br>
-   <span id="resultado">0,00</span><br><br>
+   <br><br><br>
+   <span id="resultado"></span><br><br>
    valor 1: <input id="v1" type="text"><br>
    valor 2: <input id="v2" type="text"><br>
-   valor 3: <input id="v3" type="text"><br>
-   <button onclick="media()">calcular Média</button>
-   <button onclick="soma()">calcular Soma</button>
-   <button onclick="subtração()">calcular subtração</button>
+   <button onclick="adicao()">Soma</button>
+   <button onclick="subtracao()">Subtração</button>
+   <button onclick="divisao()">Divisão</button>
+   <button onclick="multiplicacao()">Multiplicação</button>
+   <button onclick="porcentagem()">Porcentagem</button>
 </body>
+
 </html>
