--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Primeiro D</title>
+   <title>Primeiro C</title>
    <script src="estudo.js"></script>
    <link rel="stylesheet" href="geral.css">
-</head>
+   </head>
 
 <body>
 
@@ -21,20 +21,8 @@
       Nr. de Meses: <input id="meses" type="text"> <br>
       <button onclick="total()">Calcula</button>
    </div>
-   <div class="spLista">
+   <div>
       <span id="mes">Meses</span>
    </div>
-
-
-   <br><br><br>
-   <span id="resultado"></span><br><br>
-   valor 1: <input id="v1" type="text"><br>
-   valor 2: <input id="v2" type="text"><br>
-   <button onclick="adicao()">Soma</button>
-   <button onclick="subtracao()">Subtração</button>
-   <button onclick="divisao()">Divisão</button>
-   <button onclick="multiplicacao()">Multiplicação</button>
-   <button onclick="porcentagem()">Porcentagem</button>
-</body>
-
 </html>
+
