--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
    <title>Primeiro C</title>
    <script src="estudo.js"></script>
    <link rel="stylesheet" href="geral.css">
-   </head>
+</head>
 
 <body>
 
    <div id="calculadora">
       <div id="spTotal">
-         <span id="total">Total: 0,00</span><br>
+         <span id="total"> 0,00</span><br>
       </div>
       Capital: <input id="valor" type="text"> <br>
       Juros Mensais: <input id="juros" type="text"> <br>
       Nr. de Meses: <input id="meses" type="text"> <br>
       <button onclick="total()">Calcula</button>
+      <button onclick="zerar()">zerar</button>
    </div>
-   <div>
-      <span id="mes">Meses</span>
+   <div class="splista"></div>
+      <span id="mes"></span>
    </div>
 </html>
-
