--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 </head>
 
 <body>
+    
+   <input type="checkbox" id="calcFin">
 
    <div id="calculadora">
+
+      <label for="calcFin"><h3>Financeira</h3></label>
+      <div class="calcF">
+
       <div id="spTotal">
          <span id="total"> 0,00</span><br>
       </div>
@@ -25,4 +31,9 @@
    <div class="splista"></div>
       <span id="mes"></span>
    </div>
-</html>
+ 
+</div>
+</div>
+
+
+  </html>
