--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt br">
 
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Primeiro C</title>
+   <title>primeiro C</title>
    <script src="estudo.js"></script>
    <link rel="stylesheet" href="geral.css">
-</head>
+</head><body>
 
-<body>
-    
-   <input type="checkbox" id="calcFin">
-
+   <input type="checkbox" id="calcFin"> 
    <div id="calculadora">
-
       <label for="calcFin"><h3>Financeira</h3></label>
       <div class="calcF">
-
       <div id="spTotal">
-         <span id="total"> 0,00</span><br>
+         <span id="totalGeral">Total: 0,00</span><br>
       </div>
-      Capital: <input id="valor" type="text"> <br>
-      Juros Mensais: <input id="juros" type="text"> <br>
-      Nr. de Meses: <input id="meses" type="text"> <br>
-      <button onclick="total()">Calcula</button>
-      <button onclick="zerar()">zerar</button>
-   </div>
-   <div class="splista"></div>
-      <span id="mes"></span>
-   </div>
- 
-</div>
-</div>
 
+   
+         </div>
+      <div>
 
-  </html>
+         Valor: <input id="valor" placeholder="R$" type="text"><br>
+         Juros(Mensais): <input id="juros" placeholder="% mês" type="text"><br>
+         N°. de Messes: <input id="messes" placeholder="tempo" type="text"><br>
+         <button onclick="mat()">Enviar</button>
+         <button onclick="Limpar()">Limpar</button>
+         <div class="spLista">
+            <span id="mes"></span>
+         </div>
+      </div></br>
+
+   </div>
+   <input type="checkbox" id="calcESG"> 
+   <div id="calculadoraESG">
+      <label for="calcESG"><h3>Financeira</h3></label>
+       <H3>Equação<br> Segundo Grau</H3>
+      <div class="calcF">
+      <div id="spRaiz">
+           <span id="raiz">x' e x' </span>
+      <input id="a" placeholder ="a" type="text">
+      <input id="b" placeholder ="b" type="text">
+      <input id="c" placeholder ="c" type="text">
+      <button onclick="calculaESG()"> Caucula</button>
+
+      
+      <br><br><br><br>
+
+</body>
+
+</html>
